--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mobx": "^4.1.1",
+    "mobx-react": "^5.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-scripts-ts": "2.14.0"
