--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "mobx": "^4.1.1",
     "mobx-react": "^5.0.0",
+    "mobx-react-devtools": "^5.0.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-scripts-ts": "2.14.0"
