--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.12.1",
     "mobx": "^4.1.1",
     "mobx-react": "^5.0.0",
     "mobx-react-devtools": "^5.0.1",
