--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/material-ui": "^0.21.1",
+    "@types/react-tap-event-plugin": "^0.0.30",
     "firebase": "^4.12.1",
+    "material-ui": "^0.20.0",
     "mobx": "^4.1.1",
     "mobx-react": "^5.0.0",
     "mobx-react-devtools": "^5.0.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-scripts-ts": "2.14.0"
+    "react-scripts-ts": "2.14.0",
+    "react-tap-event-plugin": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
