--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
   "dependencies": {
     "@types/material-ui": "^0.21.1",
     "@types/react-tap-event-plugin": "^0.0.30",
+    "brace": "^0.11.1",
     "firebase": "^4.12.1",
+    "github-markdown-css": "^2.10.0",
+    "marked": "^0.3.19",
     "material-ui": "^0.20.0",
     "mobx": "^4.1.1",
     "mobx-react": "^5.0.0",
     "mobx-react-devtools": "^5.0.1",
     "react": "^16.3.0",
+    "react-ace": "^5.10.0",
     "react-dom": "^16.3.0",
+    "react-markdown": "^3.3.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.14.0",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "remark": "^9.0.0",
+    "remark-react": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
