--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,9 @@
     "webpack",
     "jest",
     "src/setupTests.ts"
+  ],
+  "typeRoots": [
+    "../node_modules/@types",
+    "../@types"
   ]
 }
