--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-tap-event-plugin": "^0.0.30",
     "brace": "^0.11.1",
     "firebase": "^4.12.1",
+    "firebase-admin": "^5.12.0",
     "github-markdown-css": "^2.10.0",
     "marked": "^0.3.19",
     "material-ui": "^0.20.0",
